# ocaml-qbf

./: .gitignore  .merlin  .ocamlinit  .travis-ci.sh  .travis.yml  CHANGELOG.md  Makefile  README.md  _oasis  _tags  appveyor-opam.sh  appveyor.yml  dune-project  myocamlbuild.ml  opam  qbf-quantor.odocl  qbf.odocl  qbf.opam  setup.ml
.github/workflows/: ci.yml
libs/: Makefile
libs/picosat-535/: LICENSE  README  app.c  configure  makefile.in  mkconfig  picosat.c  picosat.h
libs/quantor-3.0/: INSTALL  LICENSE  Makefile.in  configure  main.c  options.c  options.sh  quantor.c  quantor.h
libs/quantor-3.2/: configure
opam/: descr  findlib  opam
src/: META  jbuild  qbf.ml  qbf.mli  qbf.mllib  quantor.h  quantor.ml  quantor.mli  quantor_stubs.c  quantor_stubs.h
src/depqbf/: depqbf.ml  depqbf.mli
src/quantor/: dune  jbuild  quantor.ml  quantor.mli  quantor_stubs.c  quantor_stubs.h
src/random/: .merlin  qbfRandom.ml  qbfRandom.mli
tests/: all.sh  test_depqbf1.ml  test_depqbf2.ml  test_depqbf3.ml
tests/depqbf/: test_depqbf.ml  test_depqbf1.ml  test_depqbf2.ml  test_depqbf3.ml
tests/quantor/: dune  reg_13.ml  test_quantor.ml
