(library
 (foreign_stubs
  (language c)
  (names quantor_stubs))
 (name qbf_quantor)
 (public_name qbf.quantor)
 (optional)
 (wrapped false)
 (libraries qbf)
 (flags :standard -warn-error -a+8)
 (c_library_flags :standard -lquantor -lpicosat -Lsrc/quantor)
 (library_flags
  (-cclib -L.)
  (-cclib -lquantor)
  (-cclib -lpicosat)))

(rule
 (targets picosat.h quantor.h libpicosat.a libquantor.a)
 (deps
  (source_tree ../../libs))
 (action
  (bash
    "cd ../../libs && '%{make}' picosat-960/libpicosat.a quantor-3.2/libquantor.a && cp quantor-3.2/libquantor.a quantor-3.2/quantor.h picosat-960/libpicosat.a picosat-960/picosat.h ../src/quantor")))

(install
 (section lib)
 (files
  (picosat.h as quantor/picosat.h)
  (quantor.h as quantor/quantor.h)
  (libpicosat.a as quantor/libpicosat.a)
  (libquantor.a as quantor/libquantor.a)))
